--- a/websystems.css
+++ b/websystems.css
@@ -16,6 +16,13 @@ body {
     box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    background-color: white;
+    padding: 5px;
+}
+
 #header {
     background-color: #FFFFFF;
     text-align: center;
