--- a/websystems.css
+++ b/websystems.css
@@ -13,7 +13,7 @@ body {
     margin: auto;
     background-color: #FFFFFF; 
     padding: 20px 0;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 
 .grid {
@@ -100,8 +100,7 @@ h1 {
     font-size: 40px;
     margin-bottom: 20px;
     border-bottom: 2px solid black; 
-    padding-bottom: 10px;           
-    margin-bottom: 20px; 
+    padding-bottom: 10px;
     width: 90%;
     margin-left: auto;            
     margin-right: auto;
