--- a/websystems.css
+++ b/websystems.css
@@ -5,7 +5,12 @@
 }
 
 body {
-    background-color: rgb(186, 188, 197); 
+    background: url('Canyon-background-1.jpg') no-repeat center center fixed;
+    background-size: cover;    /* cover the entire viewport */
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    /*background-color: rgb(186, 188, 197);*/
 }
 
 #header, .navbar, .content, .footer {
